# energy-genai-assistant

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
src/: config.py
src/agent/: graph.py
src/api/: main.py  schemas.py
src/data/: export_marts.py  load_bigquery.py  schema.py
src/eval/: golden.py  golden_questions.json
src/rag/: knowledge.py
src/sql/: executor.py  text_to_sql.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_agent.py  test_api.py  test_golden.py  test_load_bigquery.py  test_rag.py  test_schema.py  test_text_to_sql.py
